# audio-recorder

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
mac_/: package-lock.json  package.json
mac_/src/: api.ts  store.ts  styles.css
mac_/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
mac_/src-tauri/capabilities/: default.json
mac_/src-tauri/icons/: icon.icns
mac_/src-tauri/src/: main.rs  mic.rs
mac_/src-tauri/src/capture/: windows.rs
mac_/src/components/: RecordControls.tsx
window_/: .gitignore
window_/src/: App.tsx
window_/src-tauri/: Cargo.toml  entitlements.plist
window_/src-tauri/icons/: icon.icns
window_/src-tauri/src/: commands.rs  encoder.rs  lib.rs  mixer.rs  process_list.rs  tray.rs
window_/src-tauri/src/capture/: macos.rs  mod.rs  windows.rs
window_/src/components/: PermissionGate.tsx  ProcessList.tsx  VuMeter.tsx
