[package]
name = "audio-recorder"
version = "0.1.0"
description = "Per-application audio recorder for macOS and Windows"
authors = ["audio-recorder"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "audio_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"

ringbuf = "0.4"
mp3lame-encoder = "0.2"
cpal = "0.15"
sysinfo = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-foundation = "0.10"
core-graphics-types = "0.1"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
  "NSString",
  "NSArray",
  "NSEnumerator",
  "NSURL",
] }
objc2-app-kit = { version = "0.2", features = [
  "NSWorkspace",
  "NSRunningApplication",
  "libc",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_Security",
  "Win32_System_Variant",
] }
windows-core = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
